--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "neo4j-typescript-poc",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
@@ -13,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "neo4j-driver": "^4.4.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
